# Attendance-management-center

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  README.md  docker-compose.yml  run.py
backend/: Dockerfile  pyproject.toml  railway.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: health.py
backend/app/features/dashboard/: exceptions.py  models.py  route.py  service.py  weekly.py
backend/app/features/employees/: models.py  route.py  service.py
backend/app/features/exports/: excel.py  pdf.py  route.py  service.py
backend/app/infra/: calendar_parser.py  odoo_calendars.py  odoo_client.py  odoo_employees.py  odoo_holidays.py  odoo_timesheets.py  roster.py  supabase_client.py
backend/app/shared/: date_range.py  models.py  shift_rules.py
backend/tests/: _fixtures.py  test_bugfixes.py  test_calendar_parser.py  test_dashboard.py  test_dashboard_on_leave.py  test_date_range.py  test_departments_rollup.py  test_employees.py  test_employees_absent.py  test_exception_detectors.py  test_exports.py  test_odoo_calendars.py  test_odoo_employees.py  test_odoo_holidays.py  test_odoo_timesheets.py  test_prev_day_excused.py  test_roster.py  test_roster_holidays.py  test_shift_rules.py  test_supabase_client.py  test_weekly.py  test_wfh_thursday.py  test_working_day_filter.py
config/: shift_rules.yaml
frontend/: Dockerfile  package-lock.json  package.json  railway.toml  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: format.ts  http.ts  useDateParam.ts  (+2 more)
(+24 files in other folders)
