[project]
name = "attendance-backend"
version = "0.1.0"
description = "Prezlab attendance dashboard backend (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "supabase>=2.10.0",
    "pyyaml>=6.0.2",
    "python-dateutil>=2.9.0",
    # Report exports. openpyxl writes .xlsx; reportlab writes .pdf. Both are
    # pure-Python (no system libs) so the Railway/Docker build stays simple.
    "openpyxl>=3.1.5",
    "reportlab>=4.2.0",
    # IANA timezone database. Required on Windows (no system tzdata) and
    # harmless on Linux/macOS where it's overridden by the OS database.
    "tzdata>=2024.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
